test/Fail/RecordPattern0.err
RecordPattern0.agda:2.6-14: error: [SplitError.NotADatatype]
Cannot split on argument of non-datatype Set
when checking that the pattern record {} has type Set
